--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -6,3 +6,37 @@
 <smal>for authorize users</smal>
 
 <h3>Hello, <%= user.get('username') %></h3>
+
+<div id="room">
+  <ul></ul>
+  <form>
+    <input type="text" name="msg" autocomplete="off" autofocus placeholder="Message">
+  </form>
+</div>
+
+<script src="/socket.io/socket.io.js"></script>
+<script>
+
+  var socket = io();
+
+  var $form = $('#room form');
+  var $unlist = $('#room ul');
+
+  $form.submit(function(){
+    var $input = $(this).find(':input');
+    var text = $input.val();
+    $input.val('');
+
+    // Третий параметр опциональный - выполняется, когда данные пришли на сервер
+    socket.emit('message', text, function(data){
+      $('<li>', { text: data }).appendTo($unlist);
+    });
+
+    return false;
+  });
+
+  socket.on('message', function(text) {
+    $('<li>', { text: text }).appendTo($unlist);
+  });
+
+</script>
