--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -3,15 +3,15 @@
 
 <h1>Chat Page</h1>
 
-<smal>for authorize users</smal>
-
 <h3>Hello, <%= user.get('username') %></h3>
 
 <div id="room">
   <div id="connectionStatus"></div>
-  <ul></ul>
+  <div id="output"></div>
+  <div id="feedback"></div>
   <form>
-    <input type="text" name="msg" autocomplete="off" autofocus placeholder="Message">
+    <input id="username" type="hidden" name="username" value="<%= user.get('username') %>">
+    <input id="msg" type="text" name="msg" autocomplete="off" autofocus placeholder="Message">
   </form>
 </div>
 
@@ -19,49 +19,66 @@
 <script>
 
   var $form = $('#room form');
-  var $unlist = $('#room ul');
-  var $input = $('#room input');
+  var $output = $('#output');
+  var $feedback = $('#feedback');
+  var $msg = $('#msg');
+  var $username = $('#username');
 
   var socket = io.connect('', {
-    reconnect: false
+    'reconnection': true,
+    'reconnectionDelay': 500,
+    'reconnectionDelayMax' : 5000,
+    'reconnectionAttempts': 5
   });
 
   socket
-    .on('message', function(message) {
-      printMessage(message);
+    .on('message', function(data) {
+      $feedback.html('');
+      printMessage(data);
     })
     .on('connect', function() {
       printStatus('Connection established');
       $form.on('submit', sendMessage);
-      $input.prop('disabled', false);
+      $msg.on('keypress', typingMessage);
+      $msg.prop('disabled', false);
     })
     .on('disconnect', function() {
       printStatus('Connection lost');
       $form.off('submit', sendMessage);
-      $input.prop('disabled', true);
-      // setTimeout(reconnect, 500);
+      $msg.prop('disabled', true);
     })
-    .on('reconnect_attempt', function(attempt) {
-      if(attempt === 5) {
-          printStatus('Oh, Nooo!!!');
-      }
+    .on('reconnect_failed', function() {
+      printStatus('Oh, Nooo!!!');
     });
 
+  socket.on('typing', function(data) {
+    $feedback.html('<em>' + data + ' typing a message...</em>');
+  });
 
   function sendMessage() {
-    var text = $input.val();
-    $input.val('');
+    var text = $msg.val();
+    var username = $username.val();
+    $feedback.html('');
+    $msg.val('');
 
     // Третий параметр опциональный - выполняется, когда данные пришли на сервер
-    socket.emit('message', text, function(){
+    socket.emit('message', {
+      message: text,
+      username: username
+    }, function(){
       printMessage(text);
     });
 
     return false;
   }
 
-  function printMessage(message) {
-    $('<li>', { text: message }).appendTo($unlist);
+  function typingMessage(){
+    var username = $username.val();
+    socket.emit('typing', username);
+  }
+
+  function printMessage(data) {
+    $('<p>', { html:  '<strong>' + data.username + '</strong>: ' + data.message }).appendTo($output);
     return false;
   }
 
@@ -69,16 +86,5 @@
     $('#connectionStatus').text(status);
     return false;
   }
-
-  /* reconnect
-    function reconnect() {
-      socket.once('error', function() {
-        setTimeout(reconnect, 500);
-      });
-      // socket.socket.connect('');  // socket.socket - внутренний слабодокументированный объект socket.io.
-                                // Отвечает за поддержку соединения.
-      return false;
-    }
-  */
 
 </script>
