--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,3 +1,24 @@
-body{
-  background: #777;
+*{
+  box-sizing: border-box;
+  outline: none;
 }
+
+body{
+  margin: 0;
+  background-color: #f5f5f5;
+  font-size: 16px;
+}
+
+.content{
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+  background-color: #fff;
+
+  &.content_withIndents{
+    padding: 1em;
+  }
+}
+
+
+@import 'header.scss';
