--- a/views/partials/top_nav.ejs
+++ b/views/partials/top_nav.ejs
@@ -1,16 +1,16 @@
-<nav class="topNav navbar navbar-default" role="navigation">
-  <ul class="topNav__part topNav__part_left nav navbar-nav">
-    <li class="topNav__item"><a href="/">Home</a></li>
+<nav class="topNav" role="navigation">
+  <ul class="topNav__part topNav__part_left">
+    <li class="topNav__item"><a class="topNav__link" href="/">Home</a></li>
     <% if (user) { %>
-      <li class="topNav__item"><a href="/cabinet">Cabinet</a></li>
-      <li class="topNav__item"><a href="/chat">Chat</a></li>
+      <li class="topNav__item"><a class="topNav__link" href="/cabinet">Cabinet</a></li>
+      <li class="topNav__item"><a class="topNav__link" href="/chat">Chat</a></li>
     <% } %>
   </ul>
-  <ul class="topNav__part topNav__part_right nav navbar-nav navbar-right">
+  <ul class="topNav__part topNav__part_right">
     <% if (user) { %>
-      <li class="topNav__item"><a href="" class="logOut_js">Log out</a></li>
+      <li class="topNav__item"><a class="topNav__link logOut_js" href="">Log out</a></li>
     <% } else { %>
-      <li class="topNav__item"><a href="/login">Log in</a></li>
+      <li class="topNav__item"><a class="topNav__link" href="/login">Log in</a></li>
     <% } %>
   </ul>
 </nav>
