--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,14 +3,17 @@
 
 <h1>Authorization | Registration</h1>
 
-<p>Enter the name and password. <small>If such a user does not exist, it will be created automatically</small></p>
-
-<form action="" method="" name="loginForm">
-  <input type="text" name="username" placeholder="Name">
-  <input type="password" name="password" placeholder="Password">
-  <button type="submit">Log in</button>
-  <div class="error"></div>
-</form>
+<div class="formWrap">
+  <form action="" method="" name="loginForm">
+    <p>Enter the name and password.<br>
+      <small>If such a user does not exist, it will be created automatically</small>
+    </p>
+    <input type="text" name="username" placeholder="Name">
+    <input type="password" name="password" placeholder="Password">
+    <button type="submit">Log in</button>
+    <div class="error"></div>
+  </form>
+</div>
 
 <script>
 
