--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,24 +1,49 @@
+@import 'variables.scss';
+
+@function GetWrapperHeight() {
+  @return calc(100vh - 1em - 42px);
+}
+
 *{
   box-sizing: border-box;
   outline: none;
 }
 
+a{
+  text-decoration: none;
+}
+
+h1{
+  text-align: center;
+}
+
 body{
   margin: 0;
-  background-color: #f5f5f5;
+  background-color: darken($color_white, 5);
+  color: $color_mainText;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
+}
+
+.wrapper{
+  background-color: $color_white;
+  box-shadow: $shadow;
+  min-height: GetWrapperHeight();
 }
 
 .content{
   margin: 0 auto;
   width: 100%;
   max-width: 1200px;
-  background-color: #fff;
 
   &.content_withIndents{
-    padding: 1em;
+    padding: $indent;
   }
 }
 
 
 @import 'header.scss';
+
+@import '_form.scss';
+
+@import 'chat.scss';
