--- a/views/partials/top_nav.ejs
+++ b/views/partials/top_nav.ejs
@@ -2,15 +2,15 @@
   <ul class="topNav__part topNav__part_left">
     <li class="topNav__item"><a class="topNav__link" href="/">Home</a></li>
     <% if (user) { %>
-      <li class="topNav__item"><a class="topNav__link" href="/cabinet">Cabinet</a></li>
       <li class="topNav__item"><a class="topNav__link" href="/chat">Chat</a></li>
     <% } %>
   </ul>
   <ul class="topNav__part topNav__part_right">
     <% if (user) { %>
-      <li class="topNav__item"><a class="topNav__link logOut_js" href="">Log out</a></li>
+      <li class="topNav__item"><a class="topNav__link" href="/profile" title="profile"></i> <%= user.username %></a></li>
+      <li class="topNav__item"><a class="topNav__link logOut_js" href="">Log out <i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
     <% } else { %>
-      <li class="topNav__item"><a class="topNav__link" href="/login">Log in</a></li>
+      <li class="topNav__item"><a class="topNav__link" href="/login">Log in <i class="fa fa-sign-in" aria-hidden="true"></i></a></li>
     <% } %>
   </ul>
 </nav>
