--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -2,12 +2,9 @@
 <% block('title', 'Chat Page') -%>
 
 <h1>Chat Page</h1>
-
-<!-- <h3>Hello, <%= user.get('username') %></h3> -->
-
 <div id="chatRoom" class="chatRoom">
   <div class="chatRoom__header">
-    <h3 class="chatRoom__title">Chat</h3>
+    <h3 class="chatRoom__title"><%= user.get('username') %></h3>
     <div id="connectionStatus">
       <span class="connectionStatus__msg"></span>
       <span class="connectionStatus__indicator"><i class="fa fa-rss" aria-hidden="true"></i></span>
@@ -23,7 +20,7 @@
   </form>
 </div>
 
-<script src="/socket.io/socket.io.js"></script>
+<script src="/socket.io/socket.io.js"></script> <!-- from node_modules -->
 <script>
 
   var $form = $('form[name="chatForm"]');
@@ -97,12 +94,12 @@
   }
 
   function printStatus(status, message) {
-    $('#connectionStatus .connectionStatus__msg').text(message)
+    $('#connectionStatus .connectionStatus__msg').text(message);
 
     if (status) {
-      $('#connectionStatus').addClass('on');
+      $('#connectionStatus').removeClass('off').addClass('on');
     } else {
-      $('#connectionStatus').addClass('off');
+      $('#connectionStatus').removeClass('on').addClass('off');
     }
     return false;
   }
